# TextMe

./: README.md  docker-compose.yaml  pyproject.toml
auth-service/: .env  pyproject.toml
auth-service/alembic/: env.py
auth-service/alembic/versions/: b20e556b6eae_add_users_table.py  b9f5a33c3192_add_users_table.py
auth-service/src/: main.py
auth-service/src/api/v1/: auth.py
auth-service/src/db/: deps.py
auth-service/src/models/: models.py
auth-service/src/repository/: repository.py
auth-service/src/schemas/: schemas.py
auth-service/src/security/: config.py  jwt.py  password.py
auth-service/src/services/: services.py
chat-service/: Dockerfile  pyproject.toml
chat-service/src/: main.py
chat-service/src/api/v1/: chat.py  router.py
chat-service/src/db/: deps.py  mongo.py
chat-service/src/models/: chat.py  message.py
chat-service/src/repository/: chat.py  message.py
chat-service/src/schemas/: chat.py  message.py
chat-service/src/security/: config.py
chat-service/src/services/: chat.py
k8s/: helmfile.yaml
services/auth-service/: .env  Dockerfile  alembic.ini  pyproject.toml
services/auth-service/alembic/: env.py
services/auth-service/alembic/versions/: bb4973b50b23_add_email_to_users.py
services/auth-service/src/: main.py
services/auth-service/src/db/: deps.py
services/auth-service/src/email/: email_service.py
services/auth-service/src/messaging/: publisher.py  rabbitmq.py
services/auth-service/src/models/: models.py
services/auth-service/src/repository/: email_verification_repository.py  password_reset_repository.py  refresh_token_repository.py  user_repository.py
services/auth-service/src/schemas/: schemas.py
services/auth-service/src/security/: config.py  verification.py
services/auth-service/src/services/: services.py
services/profile-service/: .env  Dockerfile  pyproject.toml
services/profile-service/alembic/: env.py
services/profile-service/alembic/versions/: f3b9098ed247_add_email.py
services/profile-service/src/: main.py
services/profile-service/src/db/: session.py
(+76 files in other folders)
